<resources>
	<string name="app_name">Users</string>

	<string name="user_image">User image</string>

	<string name="user_name_title">Name</string>
	<string name="user_name">%1$s %2$s %3$s</string>
	<string name="user_gender_title">Gender</string>
	<string name="user_age_title">Age</string>
	<string name="user_email_title">Email</string>
	<string name="user_location_title">Location</string>
	<string name="user_location">%1$s, %2$d. %3$s (%4$s). %5$s.</string>
	<string name="user_phone_title">Phone</string>
	<string name="user_cell_title">Cell</string>

	<string name="error_icon">Error icon</string>
	<string name="error_message">An upload error occurred</string>
	<string name="error_retry">Retry</string>
</resources>