<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:id="@+id/image_view"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_gravity="center"
			android:contentDescription="@string/error_icon"
			android:src="@drawable/baseline_retry_24" />

		<TextView
			android:id="@+id/text_view_error_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="@dimen/common_padding_default"
			android:text="@string/error_message"
			android:textAppearance="?attr/textAppearanceSubtitle1"
			android:textAlignment="center" />

		<Button
			android:id="@+id/button_retry"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/error_retry" />
	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>