<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/image_layout"
		android:layout_width="@dimen/large_image_width"
		android:layout_height="@dimen/large_image_height"
		android:layout_margin="@dimen/common_padding_default"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:id="@+id/image_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/user_image"
			app:srcCompat="@drawable/ic_launcher_background" />
	</com.google.android.material.card.MaterialCardView>

	<TextView
		android:id="@+id/text_view_user_name_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_min"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_name_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/image_layout"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/text_view_user_name"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/image_layout"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_name_title"
		tools:text="Full name" />

	<TextView
		android:id="@+id/text_view_user_gender_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_min"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_gender_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toStartOf="@+id/text_view_user_age_title"
		app:layout_constraintStart_toEndOf="@id/image_layout"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_name" />

	<TextView
		android:id="@+id/text_view_user_gender"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toStartOf="@+id/text_view_user_age"
		app:layout_constraintStart_toEndOf="@id/image_layout"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_gender_title"
		tools:text="Female" />

	<TextView
		android:id="@+id/text_view_user_age_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_age_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/text_view_user_gender_title"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_name" />

	<TextView
		android:id="@+id/text_view_user_age"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_max"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/text_view_user_gender_title"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_age_title"
		tools:text="37" />

	<TextView
		android:id="@+id/text_view_user_location_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_location_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/image_layout" />

	<TextView
		android:id="@+id/text_view_user_location"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_max"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_location_title"
		tools:text="Brodway, 3559. Dumedin (Waikato). New Zealand." />

	<TextView
		android:id="@+id/text_view_user_email_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_email_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_location" />

	<TextView
		android:id="@+id/text_view_user_email"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_max"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_email_title"
		tools:text="cameron.williams@example.com" />

	<TextView
		android:id="@+id/text_view_user_phone_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_phone_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_email" />

	<TextView
		android:id="@+id/text_view_user_phone"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_max"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_phone_title"
		tools:text="(964)-790-1900" />

	<TextView
		android:id="@+id/text_view_user_cell_title"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_default"
		android:layout_marginVertical="@dimen/common_padding_default"
		android:text="@string/user_cell_title"
		android:textAppearance="?attr/textAppearanceSubtitle1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_phone" />

	<TextView
		android:id="@+id/text_view_user_cell"
		android:layout_width="@dimen/constraint_width"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/common_padding_max"
		android:textAppearance="?attr/textAppearanceSubtitle2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_view_user_cell_title"
		tools:text="(006)-692-5543" />

</androidx.constraintlayout.widget.ConstraintLayout>